<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="75dp"
    android:orientation="vertical"
    android:background="#F0F2F5">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/title_buka_kasir"
        app:titleTextColor="#333333" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Nomor Mesin Kasir -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nomor_mesin"
                app:boxStrokeColor="@color/primary_blue"
                app:hintTextColor="@color/primary_blue"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/actvMesinKasir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- ID Kasir -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nama_kasir"
                android:layout_marginBottom="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNamaKasir"
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nominal Modal Awal -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_modal_awal"
                android:layout_marginBottom="24dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etModalAwal"
                    style="@style/Widget.App.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_shift_kerja"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <RadioGroup
                android:id="@+id/rgShift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="32dp">
                <RadioButton
                    android:id="@+id/rbShiftPagi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shift_pagi"
                    android:layout_weight="1"/>
                <RadioButton
                    android:id="@+id/rbShiftSiang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shift_siang"
                    android:layout_weight="1"/>
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBukaKasir"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/btn_save_buka_kasir"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
